--- a/my-portfolio/src/components/titleBlock/titleBlock.css
+++ b/my-portfolio/src/components/titleBlock/titleBlock.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: transparent;
 }
 
 .name > h1 {
